[package]
edition = "2021"
name = "superviper"
version = "0.1.0"

[[bin]]
name = "superviper"
path = "./src/bin/main.rs"

[dependencies]
# critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
# https://github.com/esp-rs/esp-hal/tree/23dfcf65605ffeda9232e1eff9785cde6a63fa0f/esp-wifi
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32c3",
  "log",
  "utils",
  "wifi",
] }
# heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
embedded-storage    = "0.3.1"
esp-storage = { version = "0.4.0", features = ["esp32c3"] }
embassy-executor    = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time        = "0.4.0"
embedded-io-async   = "0.6.1"
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }
cfg-if              = "1.0.0"
static_cell         = { version = "2.1.0", features = ["nightly"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
